--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/ordenes-prescripciones/confirmar-prescripcion/confirmar-prescripcion.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/ordenes-prescripciones/confirmar-prescripcion/confirmar-prescripcion.component.html
@@ -8,7 +8,7 @@
     <div class="icon">
         <mat-icon [inline]="true" class="material-icons-outlined" color="primary">check_circle</mat-icon>
     </div>
-    <h1 class="mat-headline item-margin">{{data.titleLabel | translate}}</h1>
+    <h1 class="mat-headline item-margin" style="padding-top: 1em;">{{data.titleLabel | translate}}</h1>
     <button class="item-margin" mat-flat-button color="primary" (click)="downloadPrescription()" fxFlexFill.xs>
         <span class="uppercase">{{data.downloadButtonLabel | translate}}</span>
     </button>
