--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/create-internment-order/create-internment-order.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/create-internment-order/create-internment-order.component.scss
@@ -14,3 +14,25 @@
 	font-size: 13px;
 	padding-bottom: 1em;
 }
+
+.dialog-actions {
+	padding-bottom: 30px
+}
+
+#order-detail {
+	padding-top: 1em;
+	padding-bottom: 1em;
+}
+
+#order-detail-category, #order-detail-health-problem, #template-included-concepts {
+	padding-bottom: 1em;
+}
+
+#selected-study-row {
+	padding: 0 15px;
+}
+
+#selected-study-name {
+	display:flex;
+	align-items: center;
+}
