--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/internacion/routes/internacion-paciente/internacion-paciente.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/internacion/routes/internacion-paciente/internacion-paciente.component.html
@@ -95,7 +95,8 @@
 			<ng-container
 				*appHasRole="['ESPECIALISTA_MEDICO', 'ENFERMERO_ADULTO_MAYOR','ENFERMERO','PROFESIONAL_DE_SALUD', 'ESPECIALISTA_EN_ODONTOLOGIA']">
 				<app-documents-summary [internmentEpisodeId]="internmentEpisodeId"
-					[clinicalEvaluation]="internmentSummaryFacadeService.clinicalEvaluation$ | async">
+					[clinicalEvaluation]="internmentSummaryFacadeService.clinicalEvaluation$ | async"
+					[patientId]="patientId">
 				</app-documents-summary>
 			</ng-container>
 		</div>
