--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/estudio/components/study-hemotherapy-card/study-hemotherapy-card.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/estudio/components/study-hemotherapy-card/study-hemotherapy-card.component.html
@@ -1,4 +1,4 @@
 <app-content width="full">
-	<app-study [studyHeader]="HEMOTHERAPY" [studies]="hemotherapies" [patientId]="patientId"></app-study>
+	<app-study (updateCurrentReportsEventEmitter)="notifyUpdateToParent()" [studyHeader]="HEMOTHERAPY" [studies]="hemotherapies" [patientId]="patientId"></app-study>
 </app-content>
 
