--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/estudio/components/study-pathologic-anatomy-card/study-pathologic-anatomy-card.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/estudio/components/study-pathologic-anatomy-card/study-pathologic-anatomy-card.component.html
@@ -1,3 +1,4 @@
 <app-content width="full">
-	<app-study [studyHeader]="PATHOLOGIC_ANATOMY" [studies]="pathologicAnatomies" [patientId]="patientId"></app-study>
+	<app-study (updateCurrentReportsEventEmitter)="notifyUpdateToParent()" [studyHeader]="PATHOLOGIC_ANATOMY" [studies]="pathologicAnatomies"
+	[patientId]="patientId"></app-study>
 </app-content>
