--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/estudio/components/study-education-card/study-education-card.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/estudio/components/study-education-card/study-education-card.component.html
@@ -1,3 +1,3 @@
 <app-content width="full">
-	<app-study [studyHeader]="EDUCATION" [studies]="educations" [patientId]="patientId"></app-study>
+	<app-study (updateCurrentReportsEventEmitter)="notifyUpdateToParent()" [studyHeader]="EDUCATION" [studies]="educations" [patientId]="patientId"></app-study>
 </app-content>
