--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/estudio/components/study-other-procedures-and-practices-card/study-other-procedures-and-practices-card.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/estudio/components/study-other-procedures-and-practices-card/study-other-procedures-and-practices-card.component.html
@@ -1,3 +1,4 @@
 <app-content width="full">
-	<app-study [studyHeader]="OTHER_PROCEDURES_AND_PRACTICES" [studies]="otherProceduresAndPractices" [patientId]="patientId"></app-study>
+	<app-study (updateCurrentReportsEventEmitter)="notifyUpdateToParent()" [studyHeader]="OTHER_PROCEDURES_AND_PRACTICES"
+	[studies]="otherProceduresAndPractices" [patientId]="patientId"></app-study>
 </app-content>
