--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/estudio/components/study-surgical-procedure-card/study-surgical-procedure-card.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/estudio/components/study-surgical-procedure-card/study-surgical-procedure-card.component.html
@@ -1,3 +1,4 @@
 <app-content width="full">
-	<app-study [studyHeader]="SURGICAL_PROCEDURE" [studies]="surgicalProcedures" [patientId]="patientId"></app-study>
+	<app-study (updateCurrentReportsEventEmitter)="notifyUpdateToParent()" [studyHeader]="SURGICAL_PROCEDURE" [studies]="surgicalProcedures"
+	[patientId]="patientId"></app-study>
 </app-content>
