--- a/front-end/apps/projects/hospital/src/app/modules/turnos/dialogs/new-attention/new-attention.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/turnos/dialogs/new-attention/new-attention.component.html
@@ -74,6 +74,12 @@
 		</div>
 
 
+		<div fxLayout="column" >
+			<mat-checkbox (change)="changeAvailableForBooking()" [checked]="form.value.availableForBooking" *ngIf="form?.value?.medicalAttentionType?.description != SPONTANEOUS ">
+				<span [translate]="'turnos.agenda-setup.dialog.BOOKING'"></span>
+			</mat-checkbox>
+		</div>
+
 		<mat-dialog-actions align="end">
 			<button *ngIf="data.isEdit" mat-flat-button mat-dialog-close color="warn" (click)="removeAttention()">
 				<span>Eliminar atención</span>
