tg-7371 Ajustes estéticos en pantalla de estudios

--- a/front-end/apps/projects/hospital/src/app/modules/presentation/components/category-header-divider/category-header-divider.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/presentation/components/category-header-divider/category-header-divider.component.html
@@ -8,5 +8,5 @@
 </div>
 
 <ng-template #svgIcon>
-	<mat-icon class="color-primary" svgIcon={{header.svgIcon}}></mat-icon>
+	<mat-icon class="color-primary svg-icon" svgIcon={{header.svgIcon}}></mat-icon>
 </ng-template>
