--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/card-estudios/card-estudios.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/card-estudios/card-estudios.component.html
@@ -11,7 +11,7 @@
 
 	<mat-menu #newPrescriptionMenu="matMenu">
 		<ng-container>
-			<button mat-menu-item (click)="openDialogNewStudy()">
+			<button mat-menu-item (click)="openCreateOutpatientOrderDialog()">
 				{{ 'ambulatoria.paciente.ordenes_prescripciones.new_prescription_menu.NEW_OUTPATIENT_PRESCRIPTION'  | translate }}
 			</button>
 
