tg-7362 [FE] Agregar pop up de error si se quiere hacer una orden ambulatoria para paciente sin problemas

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/diagnosis-required/operation-denied.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/diagnosis-required/operation-denied.component.html
@@ -9,7 +9,7 @@
 		<mat-icon [inline]="true" class="material-icons-outlined" color="primary">highlight_off</mat-icon>
 	</div>
 	<h1 class="mat-headline item-margin" style="padding-top: 1em; text-align: center">
-		{{ 'ambulatoria.paciente.internment-order.diagnosis-required-dialog.MESSAGE' | translate }}
+		{{ this.data.message | translate }}
 	</h1>
 	<button class="item-margin" mat-flat-button color="primary" (click)="closeModal()">
 		<span class="uppercase"> {{ 'buttons.ACCEPT' | translate }} </span>
