--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/internacion/dialogs/epicrisis-dock-popup/epicrisis-dock-popup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/modules/internacion/dialogs/epicrisis-dock-popup/epicrisis-dock-popup.component.html
@@ -1,5 +1,16 @@
 <app-dock-popup [dockPopupRef]="dockPopupRef" [title]="'internaciones.epicrisis.TITLE'" *ngIf="waitToResponse">
 	<div body fxLayout="column" fxLayoutGap="20px">
+		<div *ngIf="showWarning">
+			<mat-card class="background-primary">
+				<mat-card-content fxLayout="row" fxLayoutGap="10px">
+					<mat-icon color="primary">error_outline</mat-icon>
+					<div fxLayout="column" >
+						<span [translate]="'internaciones.epicrisis.warning-dialog.FIRST_TEXT'"></span>
+						<a class="bold"  [translate]="'internaciones.epicrisis.warning-dialog.SECOND_TEXT'"></a>
+					</div>
+				</mat-card-content>
+			</mat-card>
+		</div>
 		<form id="epicrisis-form" (keydown.enter)="false" [formGroup]="form">
 			<div id="mainDiagnosis">
 				<h2 class="mat-h2" [translate]="'internaciones.epicrisis.diagnosticos.TITLE'"></h2>
